--- a/index.html
+++ b/index.html
@@ -164,27 +164,41 @@
       <div class="footer-content flex">
         <div class="left-part w-2/5">
           <img src="./assets/images/logo-white.png" alt="Logo" />
-          <ul class="mt-16">
+          <ul class="mt-20">
             <li><a href="#" class="text-white">Our Mission</a></li>
             <li><a href="#" class="text-white">Contact Us</a></li>
             <li><a href="#" class="text-white">FAQ</a></li>
             <li><a href="#" class="text-white">Happy Customer</a></li>
             <li><a href="#" class="text-white">Influencers and Affiliates</a></li>
           </ul>
-          <ul class="mt-16">
+          <ul class="mt-20">
             <li><a href="#" class="text-white">Order Status</a></li>
             <li><a href="#" class="text-white">Track My Order</a></li>
             <li><a href="#" class="text-white">Shipping Information</a></li>
             <li><a href="#" class="text-white">Return and Refund Policy</a></li>
           </ul>
-          <div class="copyright text-white mt-20">
+          <div class="copyright text-white mt-24">
             © Printy Pets 2021
-            <span><i class="fa fa-pinterest"></i> 105k</span>
-            <span><i class="fa fa-facebook"></i> 25k</span>
+            <span class="ml-20"><i class="fa fa-pinterest"></i> 105k</span>
+            <span class="ml-16"><i class="fa fa-facebook"></i> 25k</span>
           </div>
         </div>
-        <div class="right-part w-3/5">
-          <h1>Get special offers, free giveaways, once-in-a-lifeime deals.</h1>
+        <div class="right-part w-3/5 pl-24">
+          <div class="text-base pb-8 tracking-wider font-semibold">NEWSLETTER</div>
+          <h1 class="text-6xl pb-12 w-3/4 leading-tight">Get special offers, free giveaways, once-in-a-lifeime deals.</h1>
+          <div class="form-group flex pb-14">
+            <input type="email" placeholder="Email" class="bg-gray-100 p-4 pl-6" />
+            <button type="submit" class="gradient-bg py-4 px-8 flex text-white font-bold">Join <img src="./assets/images/click.svg" alt="icon" class="pl-3" /></button>
+          </div>
+          <p>P.S. Use the <span>#PrintyPets</span> hashtag when you show your friends your custom pet art, because you could win a $50 voucher every month!</p>
+          <div class="pt-20 flex">
+            <p class="mr-12">Powered by Shopify</p>
+            <img src="./assets/images/amex.png" alt="payment" class="mr-4" />
+            <img src="./assets/images/ipay.png" alt="payment" class="mr-4" />
+            <img src="./assets/images/mastercard.png" alt="payment" class="mr-4" />
+            <img src="./assets/images/paypal.png" alt="payment" class="mr-4" />
+            <img src="./assets/images/visa.png" alt="payment" />
+          </div>
         </div>
       </div>
     </div>
