--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--End Top Header Section-->
 
   <!--Start Header Section-->
-  <section class="header-section p-4">
+  <section class="header-section p-4 relative">
     <div class="container mx-auto">
       <div class="flex justify-between items-center">
         <div class="logo xl:flex-1 md:mr-32 xl:mr-0">
@@ -34,28 +34,77 @@
           <div class="mr-6"><i class="fa fa-instagram"></i> 105k</div>
           <div><i class="fa fa-facebook"></i> 25k</div>
         </div>
-        <div class="navigation flex items-center justify-end flex-1 xl:ml-32">
-          <div class="nav-item dropdown">
-            <a href="#" class="font-medium">Products</a>
-            <div class="dropdown-item flex flex-col hidden">
-              <a href="#">Dropdown Nav 1</a>
-              <a href="#">Dropdown Nav 2</a>
-              <a href="#">Dropdown Nav 3</a>
+        <div class="navigation flex items-center justify-end md:flex-1 xl:ml-24">
+          <div class="nav-button block md:hidden">
+            <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+          </div>
+          <div class="nav-wrapper flex items-center">
+            <div class="nav-item dropdown relative">
+              <a href="#" class="font-medium">Products</a>
+              <div class="dropdown-item flex flex-col ml-5 md:ml-0">
+                <a href="#">Dropdown Nav 1</a>
+                <a href="#">Dropdown Nav 2</a>
+                <a href="#">Dropdown Nav 3</a>
+              </div>
             </div>
-          </div>
-          <div class="nav-item mx-12">
-            <a href="#" class="font-medium">About</a>
-          </div>
-          <div class="nav-item">
-            <a href="#" class="font-medium">Sign In</a>
-          </div>
-          <div class="nav-item ml-12">
-            <a href="#"><img src="./assets/images/cart.png" alt="Cart icon" /></a>
+            <div class="nav-item md:mx-12">
+              <a href="#" class="font-medium">About</a>
+            </div>
+            <div class="nav-item">
+              <a href="#" class="font-medium">Sign In</a>
+            </div>
+            <div class="nav-item md:ml-12">
+              <a href="#"><img src="./assets/images/cart.png" alt="Cart icon" /></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- <nav class="">
+    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-16">
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+            
+            <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex-shrink-0 flex items-center">
+            <img class="" src="./assets/images/logo.png" alt="Logo">
+          </div>
+          <div class="hidden sm:block sm:ml-6">
+            <div class="flex space-x-4">
+              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Team</a>
+              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Projects</a>
+              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Calendar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="sm:hidden" id="mobile-menu">
+      <div class="px-2 pt-2 pb-3 space-y-1">
+        <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
+
+        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
+
+        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
+
+        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
+      </div>
+    </div>
+  </nav> -->
   <!--End Header Section-->
 
 
