responsive issue fixed

--- a/index.html
+++ b/index.html
@@ -63,48 +63,6 @@
       </div>
     </div>
   </section>
-  <!-- <nav class="">
-    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-      <div class="relative flex items-center justify-between h-16">
-        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-          <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-            
-            <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-          <div class="flex-shrink-0 flex items-center">
-            <img class="" src="./assets/images/logo.png" alt="Logo">
-          </div>
-          <div class="hidden sm:block sm:ml-6">
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Team</a>
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Projects</a>
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Calendar</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="sm:hidden" id="mobile-menu">
-      <div class="px-2 pt-2 pb-3 space-y-1">
-        <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
-
-        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
-
-        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
-
-        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
-      </div>
-    </div>
-  </nav> -->
   <!--End Header Section-->
 
 
@@ -123,8 +81,8 @@
   <!--Start Tips Section-->
   <section class="tips-section gradient-bg py-20">
     <div class="container mx-auto px-4 lg:px-0">
-      <div class="xl:grid xl:grid-cols-2 flex flex-col md:flex-row items-start">
-        <ul class="tips-image lg:grid lg:grid-cols-2 gap-4 xl:mr-24 md:mr-16 md:ml-8 lg:ml-4 xl:ml-0 w-full">
+      <div class="xl:grid xl:grid-cols-2  flex flex-col md:flex-row items-start">
+        <ul class="tips-image lg:grid lg:grid-cols-2 lg:gap-4 xl:pr-24 md:pr-16 md:ml-8 lg:ml-4 xl:ml-0 w-full">
           <li><img src="./assets/images/img1.jpg" alt="image" class="lg:mt-20" /></li>
           <li><img src="./assets/images/img2.jpg" alt="image" /></li>
           <li><img src="./assets/images/img3.jpg" alt="image" /></li>
