input box width fix

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="text-base pb-8 tracking-wider font-semibold">NEWSLETTER</div>
           <h1 class="xl:text-6xl md:text-4xl lg:text-5xl text-3xl pb-12 xl:w-3/4 leading-tight">Get special offers, free giveaways, once-in-a-lifeime deals.</h1>
           <div class="form-group flex pb-14">
-            <input type="email" placeholder="Email" class="bg-gray-100 p-4 pl-6 md:w-3/5 xl:w-auto" />
+            <input type="email" placeholder="Email" class="bg-gray-100 p-4 pl-6 w-1/2 md:w-3/5 xl:w-auto" />
             <button type="submit" class="gradient-bg py-4 px-8 flex text-white font-bold">Join <img src="./assets/images/click.svg" alt="icon" class="pl-3" /></button>
           </div>
           <p>P.S. Use the <span>#PrintyPets</span> hashtag when you show your friends your custom pet art, because you could win a $50 voucher every month!</p>
