--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container mx-auto">
       <div class="flex justify-between items-center">
         <div class="logo xl:flex-1 md:mr-32 xl:mr-0 order-2 md:order-1">
-          <img src="./assets/images/logo.png" alt="Logo" class="w-3/5 md:w-auto" />
+          <img src="./assets/images/logo.png" alt="Logo" class="w-11 md:w-auto" />
         </div>
         <div class="social hidden md:flex lg:justify-end lg:flex-1 lg:mr-8 xl:mr-0 md:order-2">
           <div class="mr-6"><i class="fa fa-instagram"></i> 105k</div>
@@ -84,7 +84,7 @@
 
   <!--Start Tips Section-->
   <section class="tips-section gradient-bg py-20">
-    <div class="container mx-auto px-4 lg:px-0">
+    <div class="container mx-auto px-8 lg:px-0">
       <div class="xl:grid xl:grid-cols-2  flex flex-col md:flex-row items-start">
         <ul class="tips-image lg:grid lg:grid-cols-2 lg:gap-4 xl:pr-24 md:pr-16 md:ml-8 lg:ml-4 xl:ml-0 w-full">
           <li><img src="./assets/images/img1.jpg" alt="image" class="lg:mt-20" /></li>
@@ -157,7 +157,7 @@
 
   <!--Start Text Section-->
   <section class="text-section pb-24" style="background-color: #fbfbfb;">
-    <div class="container mx-auto px-4 md:px-8 xl:px-0">
+    <div class="container mx-auto px-8 xl:px-0">
       <h3 class="text-2xl md:text-3xl xl:text-4xl pb-11">Please Note :</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor tincidunt erat quis 
         aliquam. Suspendisse sed odio a tellus commodo dictum vitae vitae metus. Sed nulla tellus, 
@@ -173,22 +173,22 @@
     <div class="black-bg hidden md:block"></div>
     <div class="container mx-auto md:px-8 xl:px-0">
       <div class="footer-content flex flex-col md:flex-row">
-        <div class="left-part w-full md:w-2/5 order-2 md:order-1 bg-black md:bg-transparent p-4 pb-10 md:p-0">
-          <img src="./assets/images/logo-white.png" alt="Logo" />
-          <ul class="mt-20">
-            <li><a href="#" class="text-white">Our Mission</a></li>
-            <li><a href="#" class="text-white">Contact Us</a></li>
-            <li><a href="#" class="text-white">FAQ</a></li>
-            <li><a href="#" class="text-white">Happy Customer</a></li>
-            <li><a href="#" class="text-white">Influencers and Affiliates</a></li>
+        <div class="left-part w-full md:w-2/5 order-2 md:order-1 bg-black md:bg-transparent p-8 pb-10 md:p-0">
+          <img src="./assets/images/logo-white.png" alt="Logo" class="w-14 md:w-auto" />
+          <ul class="mt-12 md:mt-20">
+            <li><a href="#" class="text-white text-sm md:text-base">Our Mission</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Contact Us</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">FAQ</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Happy Customer</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Influencers and Affiliates</a></li>
           </ul>
-          <ul class="mt-20">
-            <li><a href="#" class="text-white">Order Status</a></li>
-            <li><a href="#" class="text-white">Track My Order</a></li>
-            <li><a href="#" class="text-white">Shipping Information</a></li>
-            <li><a href="#" class="text-white">Return and Refund Policy</a></li>
+          <ul class="mt-12 md:mt-20">
+            <li><a href="#" class="text-white text-sm md:text-base">Order Status</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Track My Order</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Shipping Information</a></li>
+            <li><a href="#" class="text-white text-sm md:text-base">Return and Refund Policy</a></li>
           </ul>
-          <div class="copyright text-white mt-24 flex">
+          <div class="copyright text-white mt-12 md:mt-24 flex text-sm md:text-base">
             <div>© Printy Pets 2021</div>
             <div class="ml-12 md:ml-0">
               <span class="xl:ml-20"><i class="fa fa-pinterest"></i> 105k</span>
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-        <div class="right-part w-full md:w-3/5 pl-4 xl:pl-24 lg:pl-20 md:pl-16 pb-10 order-1 md:order-2">
+        <div class="right-part w-full md:w-3/5 pr-8 md:pr-0 pl-8 xl:pl-24 lg:pl-20 md:pl-16 pb-10 order-1 md:order-2">
           <div class="text-base pb-8 tracking-wider font-semibold">NEWSLETTER</div>
           <h1 class="xl:text-6xl md:text-4xl lg:text-5xl text-3xl pb-12 xl:w-3/4 leading-tight">Get special offers, free giveaways, once-in-a-lifeime deals.</h1>
           <div class="form-group flex pb-14">
